# akraz

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  LICENSE  SECURITY.md  bunfig.toml  package.json  tsconfig.json
.github/workflows/: check.yml  windows-mvp-qa.yml  windows-mvp-release.yml  windows-mvp-soak.yml
apps/akraz/: index.html  package.json  tsconfig.json  vite.config.ts
apps/akraz/scripts/: linux-deb-packaging-preflight.mjs  linux-x11-qa-plan.mjs  linux-x11-qa-report.mjs  prepare-sidecar.mjs  smoke-daemon-lifecycle.mjs  smoke-diagnostics-snapshot.mjs  smoke-loopback-transport.mjs  smoke-peer-session-executor.mjs  smoke-peer-session.mjs  smoke-remote-control-loopback.mjs  smoke-runtime-recovery.mjs  smoke-session-connect-lifecycle.mjs  smoke-signing-preflight.mjs  smoke-tcp-transport.mjs  smoke-updater-config-preflight.mjs  smoke-windows-mvp-release-bundle.mjs  smoke-windows-mvp-release-gate.mjs  smoke-windows-mvp-soak.mjs  verify-release-metadata.mjs  verify-workflow-contracts.mjs  windows-mvp-qa-plan.mjs  windows-mvp-qa-report.mjs  windows-mvp-qa-workflow-payload.mjs  windows-mvp-release-bundle.mjs  windows-mvp-release-evidence-sources.mjs  windows-mvp-release-gate.mjs  windows-mvp-release-resolved-evidence.mjs  windows-mvp-release-workflow-inputs.mjs  windows-mvp-soak-report.mjs
apps/akraz/src/: App.svelte  app.css
apps/akraz/src-tauri/: Cargo.toml  tauri.conf.json
apps/akraz/src-tauri/capabilities/: default.json
apps/akraz/src-tauri/src/: lib.rs  main.rs
apps/akraz/src/lib/api/: daemonClient.ts  identityClient.ts  layoutClient.ts  settingsClient.ts  types.ts
apps/akraz/src/lib/diagnostics/: diagnosticsCards.ts  diagnosticsSnapshot.ts
apps/akraz/src/lib/layout/: crossingTest.ts  layoutMismatch.ts
apps/akraz/src/lib/session/: manualConnectionCandidates.ts  sessionDraft.ts
apps/akraz/src/lib/settings/: manualPeerAddresses.ts
apps/akraz/src/lib/state/: daemonState.svelte.ts  diagnosticsState.svelte.ts  identityState.svelte.ts  layoutState.svelte.ts  pairingState.svelte.ts  permissionState.svelte.ts  settingsState.svelte.ts
apps/akraz/tests/: diagnosticsCards.test.ts  diagnosticsSnapshot.test.ts  layoutCrossingTest.test.ts  layoutMismatch.test.ts  linuxDebPackaging.test.ts  linuxX11QaPlan.test.ts  linuxX11QaReport.test.ts  manualConnectionCandidates.test.ts  manualPeerAddresses.test.ts  releaseMetadata.test.ts  sessionDraft.test.ts  signingPreflight.test.ts  updaterConfigPreflight.test.ts  windowsMvpQaPlan.test.ts  windowsMvpQaReport.test.ts  windowsMvpReleaseGate.test.ts  windowsMvpSoak.test.ts  workflowContracts.test.ts
crates/akraz-core/: Cargo.toml
crates/akraz-core/src/: lib.rs
crates/akraz-daemon/: Cargo.toml
crates/akraz-daemon/src/: lib.rs  main.rs
crates/akraz-discovery/: Cargo.toml
crates/akraz-discovery/src/: lib.rs
crates/akraz-identity/: Cargo.toml
crates/akraz-identity/src/: lib.rs
crates/akraz-ipc/: Cargo.toml
crates/akraz-ipc/src/: lib.rs
crates/akraz-platform/: Cargo.toml
crates/akraz-platform/src/: lib.rs
crates/akraz-protocol/: Cargo.toml
crates/akraz-protocol/src/: lib.rs
crates/akrazctl/: Cargo.toml
crates/akrazctl/src/: main.rs
