[workspace]
resolver = "2"
members = [
  "apps/akraz/src-tauri",
  "crates/akraz-core",
  "crates/akraz-identity",
  "crates/akraz-protocol",
  "crates/akraz-platform",
  "crates/akraz-ipc",
  "crates/akraz-daemon",
  "crates/akrazctl",
]

[workspace.package]
version = "0.4.66"
edition = "2024"
license = "MIT"
rust-version = "1.88"
authors = ["Akraz contributors"]
repository = "https://github.com/akraz/akraz"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
] }
