[package]
name = "akraz-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "akraz-daemon"
path = "src/main.rs"

[dependencies]
akraz-core = { path = "../akraz-core" }
akraz-protocol = { path = "../akraz-protocol" }
akraz-platform = { path = "../akraz-platform" }
