[package]
name = "akraz-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
akraz-identity = { path = "../akraz-identity" }
akraz-protocol = { path = "../akraz-protocol" }
serde_json = { workspace = true }
