[package]
name = "akraz-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
akraz-identity = { path = "../akraz-identity" }
akraz-protocol = { path = "../akraz-protocol" }
mdns-sd = { version = "0.20.0", default-features = false }
serde_json = { workspace = true }
