[package]
name = "akraz-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
akraz-core = { path = "../akraz-core" }
akraz-platform = { path = "../akraz-platform" }
akraz-protocol = { path = "../akraz-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
