[package]
name = "akraz-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
akraz-core = { path = "../akraz-core" }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_StationsAndDesktops",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
