[package]
name = "akrazctl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "akrazctl"
path = "src/main.rs"

[dependencies]
akraz-core = { path = "../akraz-core" }
akraz-daemon = { path = "../akraz-daemon" }
akraz-ipc = { path = "../akraz-ipc" }
akraz-platform = { path = "../akraz-platform" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
