[package]
name = "akrazctl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "akrazctl"
path = "src/main.rs"

[dependencies]
akraz-ipc = { path = "../akraz-ipc" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
