[package]
name = "akrazctl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "akrazctl"
path = "src/main.rs"

[dependencies]
akraz-identity = { path = "../akraz-identity" }
akraz-ipc = { path = "../akraz-ipc" }
akraz-protocol = { path = "../akraz-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
